# YoloV5_JDE_TensorRT_for_Track

./: CSTrack3_0.yaml  LICENSE  README.md  make.sh
PytorchToTensorRTGIE/: CMakeLists.txt  calibrator.cpp  calibrator.h  common.hpp  gen_wts.py  yololayer.h  yolov5.cpp  yolov5_trt.py
demo/: CMakeLists.txt
demo/src/: main.cpp
include/: CV_AlgCommon.h  CV_AlgType.h  CV_ErrorCode.h  CV_ObjectDetectTrack.h
track/: CMakeLists.txt
track/src/api/: ObjectDetectTrack.cpp  deepsort.cpp  deepsort.h
track/src/feature/: dataType.h  model.cpp  model.h  sort_debug.h
track/src/matching/: nn_matching.cpp  track.cpp  track.h  tracker.cpp  tracker.h
track/src/model/: CMakeLists.txt  common.cpp  common.hpp  demo.cpp  jde.h  yololayer.cu  yololayer.h  yolov5_jde.cpp
track/src/thirdPart/: hungarianoper.cpp
track/src/thirdPart/munkres/: munkres.h
track/src/thirdPart/munkres/adapters/: boostmatrixadapter.h
weight/: JDEConfig.yaml
